[gd_scene load_steps=5 format=3 uid="uid://b8nb1wlpa30qv"]

[ext_resource type="Script" uid="uid://k2m1kdt5xswn" path="res://addons/redscribe/src/editor/editor_area.gd" id="1_vjpta"]
[ext_resource type="PackedScene" uid="uid://c4um2sg1dyj6c" path="res://addons/redscribe/src/editor/editor.tscn" id="2_0etm3"]
[ext_resource type="PackedScene" uid="uid://hxw2waev5bbh" path="res://addons/redscribe/src/file_dialog/file_dialog.tscn" id="3_imusf"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_imusf"]
number_color = Color(1, 1, 1, 1)
symbol_color = Color(0.984314, 0.984314, 0.827451, 1)
function_color = Color(0.972549, 0.662745, 0.835294, 1)
member_variable_color = Color(1, 1, 1, 1)
keyword_colors = {
"alias": Color(0.466667, 0.941176, 1, 1),
"alias_method": Color(0.466667, 0.941176, 1, 1),
"attr": Color(0.466667, 0.941176, 1, 1),
"attr_accessor": Color(0.466667, 0.941176, 1, 1),
"attr_reader": Color(0.466667, 0.941176, 1, 1),
"attr_writer": Color(0.466667, 0.941176, 1, 1),
"begin": Color(0.956863, 0.690196, 0.262745, 1),
"break": Color(0.956863, 0.690196, 0.262745, 1),
"case": Color(0.956863, 0.690196, 0.262745, 1),
"catch": Color(0.956863, 0.690196, 0.262745, 1),
"class": Color(0.956863, 0.690196, 0.262745, 1),
"def": Color(0.956863, 0.690196, 0.262745, 1),
"do": Color(0.956863, 0.690196, 0.262745, 1),
"else": Color(0.956863, 0.690196, 0.262745, 1),
"elsif": Color(0.956863, 0.690196, 0.262745, 1),
"end": Color(0.956863, 0.690196, 0.262745, 1),
"extend": Color(0.956863, 0.690196, 0.262745, 1),
"false": Color(0.596078, 0.882353, 1, 1),
"if": Color(0.956863, 0.690196, 0.262745, 1),
"include": Color(0.956863, 0.690196, 0.262745, 1),
"initialize": Color(0.956863, 0.690196, 0.262745, 1),
"module": Color(0.956863, 0.690196, 0.262745, 1),
"new": Color(0.956863, 0.690196, 0.262745, 1),
"next": Color(0.956863, 0.690196, 0.262745, 1),
"nil": Color(0.596078, 0.882353, 1, 1),
"prepend": Color(0.956863, 0.690196, 0.262745, 1),
"private": Color(0.466667, 0.941176, 1, 1),
"protected": Color(0.466667, 0.941176, 1, 1),
"public": Color(0.466667, 0.941176, 1, 1),
"raise": Color(0.956863, 0.690196, 0.262745, 1),
"require": Color(0.956863, 0.690196, 0.262745, 1),
"rescue": Color(0.956863, 0.690196, 0.262745, 1),
"return": Color(0.956863, 0.690196, 0.262745, 1),
"self": Color(0.466667, 0.941176, 1, 1),
"super": Color(0.466667, 0.941176, 1, 1),
"throw": Color(0.956863, 0.690196, 0.262745, 1),
"true": Color(0.596078, 0.882353, 1, 1),
"unless": Color(0.956863, 0.690196, 0.262745, 1),
"using": Color(0.956863, 0.690196, 0.262745, 1),
"when": Color(0.956863, 0.690196, 0.262745, 1),
"yield": Color(0.466667, 0.941176, 1, 1)
}
color_regions = {
"\" \"": Color(0.27451, 0.941176, 0.0352941, 1),
"#": Color(0.364706, 0.662745, 0.92549, 1),
"' '": Color(0.27451, 0.941176, 0.0352941, 1),
":  ": Color(0.862745, 0.968627, 0.0627451, 1),
"@  ": Color(0.466667, 0.941176, 1, 1)
}

[node name="ReDScribeEditorArea" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vjpta")

[node name="Editor" parent="." instance=ExtResource("2_0etm3")]
unique_name_in_owner = true
layout_mode = 2
syntax_highlighter = SubResource("CodeHighlighter_imusf")

[node name="Footer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="FooterContainer" type="HBoxContainer" parent="Footer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="FilePath" type="Label" parent="Footer/FooterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Untitled"

[node name="LanguageButton" type="MenuButton" parent="Footer/FooterContainer"]
layout_mode = 2
disabled = true
text = "Ruby"
switch_on_hover = true
item_count = 2
popup/item_0/text = "Ruby"
popup/item_0/id = 0
popup/item_1/text = "JSON"
popup/item_1/id = 1

[node name="IndentButton" type="MenuButton" parent="Footer/FooterContainer"]
layout_mode = 2
disabled = true
text = "Indent: 2"
switch_on_hover = true
item_count = 3
popup/item_0/text = "2"
popup/item_0/id = 2
popup/item_1/text = "4"
popup/item_1/id = 4
popup/item_2/text = "tab"
popup/item_2/id = 0

[node name="SaveFileDialog" parent="." instance=ExtResource("3_imusf")]
unique_name_in_owner = true
title = "Save a File"
visible = false
ok_button_text = "Save"
file_mode = 4
filters = PackedStringArray("*.rb")

[node name="ExitConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(292, 100)
dialog_text = "Do you want to exit without saving?"

[connection signal="text_changed" from="Editor" to="." method="_on_editor_text_changed"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
[connection signal="confirmed" from="ExitConfirmationDialog" to="." method="_on_exit_confirmation_dialog_confirmed"]
